--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,21 @@
     <div id="app">
         <div>{{ v_info }}</div>
         <div> <!-- left section -->
-            <input v-model="v_url" placeholder="URL">
-            <input type="range" v-model.number="v_temperature" min="0" max="2" step="0.1">
-            <input type="text" v-model="v_rule">
-            <span>{{ v_temperature }}</span>
             <div v-for="model in v_models">
                 <!-- <input v-model="model.value"> -->
-                <span>{{ model.value }}</span>
+                <span>{{ model.c_model }}</span>
             </div>
-            <input type="text" v-model="v_content" @change="f_prompt">
-            <select v-model="v_categories.select">
+            <input v-model="v_url" placeholder="URL" :disabled="v_responses.length !== 0">
+            <input type="range" v-model.number="v_temperature" min="0" max="2" step="0.1" :disabled="v_responses.length !== 0">
+            <span>{{ v_temperature }}</span>
+            <input type="text" v-model="v_rule" :disabled="v_responses.length !== 0">
+            <input type="text" v-model="v_content" :disabled="v_responses.length !== 0">
+            <select v-model="v_categories.select" :disabled="v_responses.length !== 0">
                 <option v-for="category in v_categories.option" :key="category.c_id" :value="category.c_id">
                     {{ category.c_category }}
                 </option>
             </select>
+            <button @click="f_prompt" :disabled="v_responses.length !== 0">Submit</button>
         </div>
         <!-- right section -->
         <div> <!-- max 100vh-->
@@ -34,10 +35,11 @@
                 <div v-html="response.think"></div> <!--must be able to be shortened, not shown all, press it and then it will be shown-->
                 <hr>
                 <div v-html="response.final"></div>
-                <input type="number" v-model.number="response.scores" min="1" max="5">
-                {{response.scores}}
+                <input type="number" v-model.number="response.score" min="1" max="5">
+                {{response.score}}
             </div>
             <button @click="f_upload_data" :disabled="v_responses.length === 0">Upload</button>
+            <button @click="f_cancel_upload_data" :disabled="v_responses.length === 0">Cancel</button>
         </div>
     </div>
     <script src="main.js" type="module"></script>
