--- a/public/index.html
+++ b/public/index.html
@@ -298,6 +298,6 @@
             </div>
         </div>
     </div>
-    <script src="main.js" type="module"></script>
+    <script src="assets/main.js" type="module"></script>
 </body>
 </html>
