--- a/public/index.html
+++ b/public/index.html
@@ -232,11 +232,37 @@
                             <div class="w-8 h-8 bg-purple-500 rounded-full flex items-center justify-center text-white font-bold">
                                 {{ index + 1 }}
                             </div>
-                            <div>
+                            <div class="text-purple-200 text-sm space-y-1">
                                 <h3 class="text-white font-semibold">Response #{{ index + 1 }}</h3>
-                                <div class="text-purple-200 text-sm">
-                                    <i class="fas fa-clock mr-1"></i>
-                                    Duration: {{ response.total_duration || 'N/A' }}
+                                <div>
+                                    <i class="fas fa-clock mr-1 text-yellow-300"></i>
+                                    Total Time: {{ (response.total_duration / 1_000_000_000).toFixed(2) }} seconds
+                                </div>
+                                <div>
+                                    <i class="fas fa-download mr-1 text-blue-300"></i>
+                                    Loading Time: {{ (response.load_duration / 1_000_000_000).toFixed(2) }} seconds
+                                </div>
+                                <div>
+                                    <i class="fas fa-terminal mr-1 text-green-300"></i>
+                                    Input Sections Checked: {{ response.prompt_eval_count }}
+                                </div>
+                                <div>
+                                    <i class="fas fa-hourglass-half mr-1 text-green-300"></i>
+                                    Time Checking Input: {{ (response.prompt_eval_duration / 1_000_000_000).toFixed(2) }} seconds
+                                </div>
+                                <div>
+                                    <i class="fas fa-check-double mr-1 text-pink-300"></i>
+                                    Total Tokens Processed: {{ response.eval_count }}
+                                </div>
+                                <div>
+                                    <i class="fas fa-stopwatch mr-1 text-pink-300"></i>
+                                    Time Processing Tokens: {{ (response.eval_duration / 1_000_000_000).toFixed(2) }} seconds
+                                </div>
+                                <div>
+                                    <i class="fas fa-tachometer-alt mr-1 text-cyan-300"></i>
+                                    Speed: {{
+                                        (response.eval_count / (response.eval_duration / 1_000_000_000)).toFixed(1)
+                                    }} tokens/sec
                                 </div>
                             </div>
                         </div>
