--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
                 <div class="grid grid-cols-2 gap-4">
                     <div>
                         <label class="block text-white font-semibold mb-2">
-                            <i class="fas fa-sticky-note mr-2"></i>Note
+                            <i class="fas fa-sticky-note mr-2"></i>Notes
                         </label>
                         <input type="text" 
                                v-model="v_note"
