--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -119,7 +119,7 @@
     <div id="app" class="min-h-screen">
         <!-- Header Navigation -->
         <header class="glass-effect border-b border-white/10 sticky top-0 z-50">
-            <div class="container mx-auto px-6 py-4">
+            <div class="mx-auto px-6 py-4">
                 <div class="flex items-center justify-between">
                     <div class="flex items-center space-x-4">
                         <div class="flex items-center space-x-3">
@@ -151,6 +151,22 @@
                             <span>Models Manager</span>
                         </button>
                         <button 
+                            @click="v_active_section = 'inputs'"
+                            :class="v_active_section === 'inputs' ? 'active' : ''"
+                            class="nav-button px-6 py-3 rounded-xl font-semibold text-white flex items-center space-x-2"
+                        >
+                            <i class="fas fa-tags"></i>
+                            <span>Inputs Manager</span>
+                        </button>
+                        <button 
+                            @click="v_active_section = 'outputs'"
+                            :class="v_active_section === 'outputs' ? 'active' : ''"
+                            class="nav-button px-6 py-3 rounded-xl font-semibold text-white flex items-center space-x-2"
+                        >
+                            <i class="fas fa-tags"></i>
+                            <span>Outputs Manager</span>
+                        </button>
+                        <button 
                             @click="v_active_section = 'sql'"
                             :class="v_active_section === 'sql' ? 'active' : ''"
                             class="nav-button px-6 py-3 rounded-xl font-semibold text-white flex items-center space-x-2"
@@ -160,7 +176,7 @@
                         </button>
                     </div>
 
-                    <div class="flex items-center space-x-4">
+                    <!-- <div class="flex items-center space-x-4">
                         <div class="glass-effect rounded-lg px-4 py-2">
                             <span class="text-green-300 text-sm flex items-center">
                                 <div class="w-2 h-2 bg-green-400 rounded-full mr-2 status-indicator"></div>
@@ -170,7 +186,7 @@
                         <div class="text-white/60 text-sm">
                             {{ new Date().toLocaleTimeString() }}
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </header>
@@ -238,6 +254,7 @@
                                                 v-for="(value, key) in v_categories[0]" 
                                                 :key="key"
                                                 class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
+                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                             >
                                                 {{ key.replace('c_', '').replace('_', ' ') }}
                                             </th>
@@ -251,6 +268,7 @@
                                             v-for="(row, index) in v_categories" 
                                             :key="row.c_id || index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
+                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
@@ -343,6 +361,7 @@
                                                 v-for="(value, key) in v_models[0]" 
                                                 :key="key"
                                                 class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
+                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                             >
                                                 {{ key.replace('c_', '').replace('_', ' ') }}
                                             </th>
@@ -356,6 +375,7 @@
                                             v-for="(row, index) in v_models" 
                                             :key="row.c_id || index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
+                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
@@ -381,6 +401,174 @@
                                     </div>
                                     <h3 class="text-xl font-semibold mb-2">No Models Yet</h3>
                                     <p>Start by adding your first model using the form above.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </transition>
+
+            <!-- Input Management Section -->
+            <transition name="fade" mode="out-in">
+                <div v-if="v_active_section === 'inputs'" key="inputs" class="workbench-section">
+                    <div class="glass-effect rounded-3xl p-8 shadow-2xl">
+                        <div class="flex items-center justify-between mb-8">
+                            <div class="flex items-center space-x-4">
+                                <div class="w-12 h-12 bg-gradient-to-r from-green-500 to-emerald-600 rounded-2xl flex items-center justify-center">
+                                    <i class="fas fa-tags text-white text-xl"></i>
+                                </div>
+                                <div>
+                                    <h2 class="text-3xl font-bold text-white">Inputs Management</h2>
+                                    <p class="text-green-300">Manage your database inputs and entities</p>
+                                </div>
+                            </div>
+                            <div class="bg-green-500/20 px-6 py-3 rounded-2xl border border-green-500/30">
+                                <span class="text-green-300 font-bold text-lg">
+                                    {{ v_inputs.length }} Inputs
+                                </span>
+                            </div>
+                        </div>
+
+                        <!-- Inputs Table -->
+                        <div class="glass-effect rounded-2xl overflow-hidden border border-white/10">
+                            <div class="bg-black/20 px-6 py-4 border-b border-white/10">
+                                <h3 class="text-white font-semibold flex items-center">
+                                    <i class="fas fa-table mr-2 text-blue-400"></i>
+                                    Inputs Database
+                                </h3>
+                            </div>
+                            <div class="table-container">
+                                <table class="w-full" v-if="v_inputs.length > 0">
+                                    <thead class="bg-black/40 sticky top-0">
+                                        <tr>
+                                            <th 
+                                                v-for="(value, key) in v_inputs[0]" 
+                                                :key="key"
+                                                class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
+                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                            >
+                                                {{ key.replace('c_', '').replace('_', ' ') }}
+                                            </th>
+                                            <th class="px-6 py-4 text-center text-white font-bold uppercase text-sm tracking-wider">
+                                                Actions
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr 
+                                            v-for="(row, index) in v_inputs" 
+                                            :key="row.c_id || index"
+                                            class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
+                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                        >
+                                            <td 
+                                                v-for="(value, key) in row" 
+                                                :key="key"
+                                                class="px-6 py-4 text-white text-lg"
+                                            >
+                                                {{ value }}
+                                            </td>
+                                            <td class="px-6 py-4 text-center">
+                                                <button 
+                                                    @click="f_delete_input(row.c_id || index)"
+                                                    class="px-4 py-2 bg-red-500/20 text-red-300 rounded-lg hover:bg-red-500/40 hover:text-red-100 transition-all duration-200 border border-red-500/30"
+                                                >
+                                                    <i class="fas fa-trash mr-2"></i>Delete
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <div v-else class="p-12 text-center text-white/60">
+                                    <div class="w-24 h-24 mx-auto mb-6 bg-white/5 rounded-full flex items-center justify-center">
+                                        <i class="fas fa-inbox text-4xl opacity-50"></i>
+                                    </div>
+                                    <h3 class="text-xl font-semibold mb-2">No Inputs Yet</h3>
+                                    <p>Start by adding your first input using the form above.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </transition>
+
+            <!-- Output Management Section -->
+            <transition name="fade" mode="out-in">
+                <div v-if="v_active_section === 'outputs'" key="outputs" class="workbench-section">
+                    <div class="glass-effect rounded-3xl p-8 shadow-2xl">
+                        <div class="flex items-center justify-between mb-8">
+                            <div class="flex items-center space-x-4">
+                                <div class="w-12 h-12 bg-gradient-to-r from-green-500 to-emerald-600 rounded-2xl flex items-center justify-center">
+                                    <i class="fas fa-tags text-white text-xl"></i>
+                                </div>
+                                <div>
+                                    <h2 class="text-3xl font-bold text-white">Outputs Management</h2>
+                                    <p class="text-green-300">Manage your database outputs and entities</p>
+                                </div>
+                            </div>
+                            <div class="bg-green-500/20 px-6 py-3 rounded-2xl border border-green-500/30">
+                                <span class="text-green-300 font-bold text-lg">
+                                    {{ v_outputs.length }} Outputs
+                                </span>
+                            </div>
+                        </div>
+
+                        <!-- Outputs Table -->
+                        <div class="glass-effect rounded-2xl overflow-hidden border border-white/10">
+                            <div class="bg-black/20 px-6 py-4 border-b border-white/10">
+                                <h3 class="text-white font-semibold flex items-center">
+                                    <i class="fas fa-table mr-2 text-blue-400"></i>
+                                    Outputs Database
+                                </h3>
+                            </div>
+                            <div class="table-container">
+                                <table class="w-full" v-if="v_outputs.length > 0">
+                                    <thead class="bg-black/40 sticky top-0">
+                                        <tr>
+                                            <th 
+                                                v-for="(value, key) in v_outputs[0]" 
+                                                :key="key"
+                                                class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
+                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                            >
+                                                {{ key.replace('c_', '').replace('_', ' ') }}
+                                            </th>
+                                            <th class="px-6 py-4 text-center text-white font-bold uppercase text-sm tracking-wider">
+                                                Actions
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr 
+                                            v-for="(row, index) in v_outputs" 
+                                            :key="row.c_id || index"
+                                            class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
+                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                        >
+                                            <td 
+                                                v-for="(value, key) in row" 
+                                                :key="key"
+                                                class="px-6 py-4 text-white text-lg"
+                                            >
+                                                {{ value }}
+                                            </td>
+                                            <td class="px-6 py-4 text-center">
+                                                <button 
+                                                    @click="f_delete_output(row.c_id || index)"
+                                                    class="px-4 py-2 bg-red-500/20 text-red-300 rounded-lg hover:bg-red-500/40 hover:text-red-100 transition-all duration-200 border border-red-500/30"
+                                                >
+                                                    <i class="fas fa-trash mr-2"></i>Delete
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <div v-else class="p-12 text-center text-white/60">
+                                    <div class="w-24 h-24 mx-auto mb-6 bg-white/5 rounded-full flex items-center justify-center">
+                                        <i class="fas fa-inbox text-4xl opacity-50"></i>
+                                    </div>
+                                    <h3 class="text-xl font-semibold mb-2">No Outputs Yet</h3>
+                                    <p>Start by adding your first input using the form above.</p>
                                 </div>
                             </div>
                         </div>
@@ -497,6 +685,7 @@ SELECT * FROM t_output;"
                                             v-for="(row, index) in v_hub_sql" 
                                             :key="index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
+                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
