--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,9 @@
 </head>
 <body class="gradient-bg min-h-screen">
     <div id="app" class="flex h-screen">
+        <div v-if="v_info" class="fixed top-4 right-4 text-purple-200 text-sm font-medium px-3 py-2 bg-red-500/20 rounded-lg shadow-lg z-50">
+            {{ v_info || 'Ready to process your requests' }}
+        </div>
         <!-- Left Panel - Control Panel -->
         <div class="w-1/3 p-6 glass-effect m-4 rounded-2xl shadow-2xl overflow-y-auto">
             <div class="mb-8">
@@ -89,9 +92,6 @@
                     <i class="fas fa-robot mr-3 text-purple-300"></i>
                     AI Workbench
                 </h1>
-                <div class="text-purple-200 text-sm font-medium px-3 py-2 bg-purple-500/20 rounded-lg">
-                    {{ v_info || 'Ready to process your requests' }}
-                </div>
             </div>
 
             <!-- Configuration -->
