--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -616,7 +616,7 @@
 
                         <!-- <div class="grid lg:grid-cols-2 gap-8"> -->
                         <!-- SQL Input Section -->
-                        <div class="space-y-6">
+                        <div class="space-y-6 mb-8">
                             <div class="code-highlight rounded-2xl p-6 border border-white/10">
                                 <h3 class="text-white font-bold mb-4 flex items-center text-lg">
                                     <i class="fas fa-code mr-2 text-blue-400"></i>SQL Query Editor
