--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,6 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Database Management Workbench</title>
     <style>
+        thead{
+            z-index: 1000;
+            background-color: 	hsl(215, 14%, 20%);
+        }
         .glass-effect {
             background: rgba(255, 255, 255, 0.08);
             backdrop-filter: blur(15px);
@@ -248,13 +252,13 @@
                             </div>
                             <div class="table-container">
                                 <table class="w-full" v-if="v_categories.length > 0">
-                                    <thead class="bg-black/40 sticky top-0">
+                                    <thead class="sticky top-0">
                                         <tr>
                                             <th 
                                                 v-for="(value, key) in v_categories[0]" 
                                                 :key="key"
                                                 class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
-                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ key.replace('c_', '').replace('_', ' ') }}
                                             </th>
@@ -268,12 +272,12 @@
                                             v-for="(row, index) in v_categories" 
                                             :key="row.c_id || index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
-                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
                                                 :key="key"
                                                 class="px-6 py-4 text-white text-lg"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ value }}
                                             </td>
@@ -355,13 +359,13 @@
                             </div>
                             <div class="table-container">
                                 <table class="w-full" v-if="v_models.length > 0">
-                                    <thead class="bg-black/40 sticky top-0">
+                                    <thead class="sticky top-0">
                                         <tr>
                                             <th 
                                                 v-for="(value, key) in v_models[0]" 
                                                 :key="key"
                                                 class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
-                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ key.replace('c_', '').replace('_', ' ') }}
                                             </th>
@@ -375,12 +379,12 @@
                                             v-for="(row, index) in v_models" 
                                             :key="row.c_id || index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
-                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
                                                 :key="key"
                                                 class="px-6 py-4 text-white text-lg"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ value }}
                                             </td>
@@ -439,13 +443,13 @@
                             </div>
                             <div class="table-container">
                                 <table class="w-full" v-if="v_inputs.length > 0">
-                                    <thead class="bg-black/40 sticky top-0">
+                                    <thead class="sticky top-0">
                                         <tr>
                                             <th 
                                                 v-for="(value, key) in v_inputs[0]" 
                                                 :key="key"
                                                 class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
-                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ key.replace('c_', '').replace('_', ' ') }}
                                             </th>
@@ -459,12 +463,12 @@
                                             v-for="(row, index) in v_inputs" 
                                             :key="row.c_id || index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
-                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
                                                 :key="key"
                                                 class="px-6 py-4 text-white text-lg"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ value }}
                                             </td>
@@ -523,13 +527,13 @@
                             </div>
                             <div class="table-container">
                                 <table class="w-full" v-if="v_outputs.length > 0">
-                                    <thead class="bg-black/40 sticky top-0">
+                                    <thead class="sticky top-0">
                                         <tr>
                                             <th 
                                                 v-for="(value, key) in v_outputs[0]" 
                                                 :key="key"
                                                 class="px-6 py-4 text-left text-white font-bold uppercase text-sm tracking-wider"
-                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ key.replace('c_', '').replace('_', ' ') }}
                                             </th>
@@ -543,12 +547,12 @@
                                             v-for="(row, index) in v_outputs" 
                                             :key="row.c_id || index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
-                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
                                                 :key="key"
                                                 class="px-6 py-4 text-white text-lg"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ value }}
                                             </td>
@@ -668,13 +672,13 @@ SELECT * FROM t_output;"
                             </div>
                             <div class="table-container">
                                 <table v-if="v_hub_sql.length > 0" class="w-full">
-                                    <thead class="bg-black/40 sticky top-0">
+                                    <thead class="sticky top-0">
                                         <tr>
                                             <th 
                                                 v-for="(value, key) in v_hub_sql[0]" 
                                                 :key="key"
                                                 class="px-4 py-3 text-left text-white font-bold uppercase text-xs tracking-wider"
-                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ key.replace('c_', '').replace('_', ' ') }}
                                             </th>
@@ -685,13 +689,12 @@ SELECT * FROM t_output;"
                                             v-for="(row, index) in v_hub_sql" 
                                             :key="index"
                                             class="data-row border-b border-white/5 hover:bg-white/5 transition-all duration-200"
-                                            style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
                                         >
                                             <td 
                                                 v-for="(value, key) in row" 
                                                 :key="key"
                                                 class="px-4 py-3 text-white"
-                                                style="max-width: 300px; max-height: 60px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
+                                                :style="f_get_th_style(key)" @click="toggle_key(key)"
                                             >
                                                 {{ value }}
                                             </td>
