--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -24,7 +24,7 @@
         }
 
         .table-container {
-            max-height: 500px;
+            max-height: 60vh;
             overflow-y: auto;
         }
 
